--- a/VPNShield/VPNShield.csproj
+++ b/VPNShield/VPNShield.csproj
@@ -50,22 +50,22 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Exiled.API">
-      <HintPath>..\packages\EXILED.2.1.29\lib\net472\Exiled.API.dll</HintPath>
+      <HintPath>..\packages\EXILED.2.3.3\lib\net472\Exiled.API.dll</HintPath>
     </Reference>
     <Reference Include="Exiled.Bootstrap">
-      <HintPath>..\packages\EXILED.2.1.29\lib\net472\Exiled.Bootstrap.dll</HintPath>
+      <HintPath>..\packages\EXILED.2.3.3\lib\net472\Exiled.Bootstrap.dll</HintPath>
     </Reference>
     <Reference Include="Exiled.Events">
-      <HintPath>..\packages\EXILED.2.1.29\lib\net472\Exiled.Events.dll</HintPath>
+      <HintPath>..\packages\EXILED.2.3.3\lib\net472\Exiled.Events.dll</HintPath>
     </Reference>
     <Reference Include="Exiled.Loader">
-      <HintPath>..\packages\EXILED.2.1.29\lib\net472\Exiled.Loader.dll</HintPath>
+      <HintPath>..\packages\EXILED.2.3.3\lib\net472\Exiled.Loader.dll</HintPath>
     </Reference>
     <Reference Include="Exiled.Permissions">
-      <HintPath>..\packages\EXILED.2.1.29\lib\net472\Exiled.Permissions.dll</HintPath>
+      <HintPath>..\packages\EXILED.2.3.3\lib\net472\Exiled.Permissions.dll</HintPath>
     </Reference>
     <Reference Include="Exiled.Updater">
-      <HintPath>..\packages\EXILED.2.1.29\lib\net472\Exiled.Updater.dll</HintPath>
+      <HintPath>..\packages\EXILED.2.3.3\lib\net472\Exiled.Updater.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\..\..\..\..\mnt\SEAGATE_2TB\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Assembly-CSharp.dll</HintPath>
@@ -84,6 +84,9 @@
     </Reference>
     <Reference Include="Mirror">
       <HintPath>..\..\..\..\..\..\..\..\mnt\SEAGATE_2TB\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Mirror.dll</HintPath>
+    </Reference>
+    <Reference Include="Exiled.CreditTags">
+      <HintPath>..\packages\EXILED.2.3.3\lib\net472\Exiled.CreditTags.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
