--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,7 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+#VPNShield update checker server code
+checkForUpdate.php
+config.php
